--- a/my-blog-sam/config.toml
+++ b/my-blog-sam/config.toml
@@ -1,4 +1,4 @@
-baseurl                  = "https://example.com"           # Your domain name
+baseurl                  = "https://andreacuriel.github.io/blog-sam/"           # Your domain name
 languageCode             = "en-us"
 defaultContentLanguage   = "en"
 isMultilingual           = false
